Switch to uncompressed tar for JRE, extract on first run